--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h3>Voici la deuxieme version du site</h3>
 
-<h4>voisi la 3 eme version</h3> 
+<h1>voisi la version final</h1> 
 
 </body>
 </html>
