--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
-<body>
+	<head>
+		<p>Hello Word</p>
+	</head>
+	
+	<body>
+		<img src="images/SM5.jpg"
+		     alt="Photo of a orange juste"
+		     width="500"
+		     height="300">		
+	</body>
 
-<h1>Bienvenu sur mon site perso</h1>
-
-<p>CV</p>
-
-<h3>Voici la deuxieme version du site</h3>
-
-<h1>voisi la version final</h1> 
-
-</body>
-</html>
+	<foot>
+	</foot>
+</html>     
