--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
 	<head>
-		<p>Hello Word</p>
+		<tittle>Hello World</tittle>
 	</head>
 	
 	<body>
+		<h1>My test</h1>
+
+		<p>Here is  my image example</p>
+
 		<img src="images/SM5.jpg"
 		     alt="Photo of a orange juste"
 		     width="500"
