--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 		<p>Here is  my image example</p>
 
-		<img src="images/SM5.jpg"
-		     alt="Photo of a orange juste"
+		<img src="images/spaceship.jpg"
+		     alt="Photo of a spaceship"
 		     width="500"
 		     height="300">		
 	</body>
