--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <html>
-	<head>
-		<tittle>Hello World</tittle>
-	</head>
-	
-	<body>
-		<h1>My test</h1>
+        <head>
+                <tittle>Hello World</tittle>
+        </head>
 
-		<p>Here is  my image example</p>
+        <body>
+                <h1>My test</h1>
 
-		<img src="images/spaceship.jpg"
-		     alt="Photo of a spaceship"
-		     width="500"
-		     height="300">		
-	</body>
+                <p>Here is  my image example</p>
 
-	<foot>
-	</foot>
-</html>     
+                <img src="https://en.wikipedia.org/wiki/Space#/media/File:3D_coordinate_system.svg">
+        </body>
+</html>
+     
