--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
                 <p>Here is  my image example</p>
 
-                <img src="https://en.wikipedia.org/wiki/Space#/media/File:3D_coordinate_system.svg">
+                <img src="https://en.wikipedia.org/wiki/PNG#/media/File:PNG_transparency_demonstration_1.png">
         </body>
 </html>
      
